Added getting port from a directory feature

--- a/DB GO/src/main/webapp/userDB.html
+++ b/DB GO/src/main/webapp/userDB.html
@@ -22,6 +22,10 @@
       <label>Database ip</label>
       <input type="text" min="1" name="ip">
     </div>
+    <div class="input-wrapper ip-input x-axis-flex">
+      <label>Database port</label>
+      <input type="number" min="1" name="port">
+    </div>
     <div class="input-wrapper name-input x-axis-flex">
       <label>User Name</label>
       <input type="text" min="1" name="Uname" autocomplete="off">
